# badge-2024-software

./: .gitignore  .gitmodules  .pre-commit-config.yaml  DEBUG.md  Dockerfile  Dockerfile.mpcross  LICENSE  README.md  badge-sim-apps.code-workspace  burn_mac.py  pyrightconfig.json
.github/: PULL_REQUEST_TEMPLATE.md
bringup-software/: FUSB302.py  bq25895.py  gc9a01py.py  lsm6ds3.py  main.py  nodulos.py  pymakr.conf
components/st3m/: CMakeLists.txt  Kconfig  st3m_counter.c  st3m_counter.h  st3m_gfx.c  st3m_gfx.h  st3m_imu.c  st3m_imu.h  st3m_scope.c  st3m_scope.h  st3m_sys_data.h  st3m_version.h
components/st3m/host-tools/: version.py
drivers/: micropython.cmake  tca9548a.c  tca9548a.h  tildagon.c  tildagon.h  tildagon_i2c.c  tildagon_i2c.h  tildagon_py.c
flasher/: README.md  README.txt  index.html  manifest.json  provision.json
modules/: app.py  async_helpers.py  async_queue.py  aw9523b.py  bq25895.py  capabilities.py  eeprom_partition.py  eventbus.py  fusb302b.py  gc9a01py.py  hexpansion.py  hid_host_test.py  initgfx.py  lsm6ds3.py  main.py  perf_timer.py  power_handler.py  provision_fb.py  scheduler.py  scratchpad.py  settings.py  tca9548a.py  tildagonos.py  vga2_bold_16x16.py  wifi.py  write_header.py
patches/: micropython-i2s-pdm.diff  micropython-lib.diff  micropython.diff  micropython_wasm.diff  mp-rmtrx.patch  nimble-our-sec-by-index.diff  remove_usb_repl.diff  usb_host.diff
scripts/: build.sh  build_wasm.sh  embed_file.py  fb2026 config.py  firstTime.sh  hard-reset.sh  merge-firmwares.sh
sim/: Pipfile  README.md  config.py.default  requirements.txt  (+1 more)
(+316 files in other folders)
